add profile links

--- a/index.html
+++ b/index.html
@@ -896,6 +896,18 @@ product = def <span class="string">"product"</span>, [
 </section>
 
 <section class="slide">
+  <h1>Thanks</h1>
+</section>
+
+<section class="slide">
+  <ul>
+    <li><a href="https://alpha.app.net/davidchambers">app.net/davidchambers</a></li>
+    <li><a href="https://bitbucket.org/davidchambers">bitbucket.org/davidchambers</a></li>
+    <li><a href="https://github.com/davidchambers">github.com/davidchambers</a></li>
+  </ul>
+</section>
+
+<section class="slide">
   <h1>Lisp is wondrous</h1>
 </section>
 
@@ -1157,7 +1169,7 @@ product = def <span class="string">"product"</span>, [
 </section>
 
 <section class="slide">
-  <h1>Thanks</h1>
+  <h1>Thanks (again)</h1>
 </section>
 
 <!-- End slides. -->
