add link to davidchambers/rich

--- a/index.html
+++ b/index.html
@@ -905,6 +905,9 @@ product = def <span class="string">"product"</span>, [
     <li><a href="https://bitbucket.org/davidchambers">bitbucket.org/davidchambers</a></li>
     <li><a href="https://github.com/davidchambers">github.com/davidchambers</a></li>
   </ul>
+  <ul>
+    <li><a href="https://github.com/davidchambers/rich">Rich</a></li>
+  </ul>
 </section>
 
 <section class="slide">
