add link to slide show

--- a/index.html
+++ b/index.html
@@ -906,6 +906,7 @@ product = def <span class="string">"product"</span>, [
     <li><a href="https://github.com/davidchambers">github.com/davidchambers</a></li>
   </ul>
   <ul>
+    <li><a href="http://davidchambers.github.io/the-functions-of-functions/">The Functions of Functions</a></li>
     <li><a href="https://github.com/davidchambers/rich">Rich</a></li>
   </ul>
 </section>
