--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ qs (p:xs) = (qs lesser) ++ [p] ++ (qs greater)
 </section>
 
 <section class="slide">
-  <p>SQL is a declarative</p>
+  <p>SQL is declarative</p>
   <pre><code class="sql"><span class="keyword">SELECT</span> *
  <span class="keyword">FROM</span> Book
  <span class="keyword">WHERE</span> price &gt; <span class="number">100.00</span>
