--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@ rest = (iter) <span class="keyword">-&gt;</span>
 <span class="prompt">&gt;</span> seq.state.first = <span class="number">1</span>
 <span class="number">1</span>
 <span class="prompt">&gt;</span> seq.state.rest = seq
-{ iter: <span class="literal undefined">undefined</span>,
+{ f: <span class="literal undefined">undefined</span>,
   state: { first: <span class="number">1</span>, rest: [Circular] } }
 </code></pre>
 </section>
